# doomDepth

./: .clang-format  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  makefile
.github/TEMPLATES/:  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cpp-linter.yml  formatter.yml  lint.yml
docker/: Dockerfile
src/: ansii_print.c  event.c  fight.c  items.c  main.c  map.c  shop.c  smith.c  start.c  utils.c
src/ascii/: another_goblin.txt  archer.txt  dark_mage.txt  defeat.txt  dragon.txt  event.txt  final.txt  fire_elemental.txt  goblin.txt  inventory.txt  map.txt  map1.txt  map2.txt  map3.txt  map_save  menu.txt  ninja.txt  orc_warrior.txt  shop.txt  win.txt
src/ascii/monster/: 1.txt  10.txt  11.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/ascii/player/: archer.txt  mage.txt
src/ascii/shop/: 1.txt  dealer.txt  shop.txt  shopdealer.txt  stuff.txt
src/ascii/smith/: smith.txt
src/db/: doomdepth.sqlite  old.sqlite
src/includes/: ansii_print.h  event.h  fight.h  items.h  map.h  shop.h  smith.h  start.h  utils.h
src/story/village_0/places/place_0/: name.txt  next_place.txt  next_village.txt
src/story/village_0/places/place_0/scenarios/scenario_0/: context.txt  situation.txt
src/story/village_0/places/place_0/scenarios/scenario_0/blue_pill/: context.txt  situation.txt
src/story/village_0/places/place_0/scenarios/scenario_0/red_pill/: context.txt  situation.txt
src/story/village_0/places/place_1/: description.txt  next_place.txt
src/story/village_0/places/place_1/scenarios/scenario_0/: context.txt  situation.txt
src/story/village_0/places/place_1/scenarios/scenario_0/blue_pill/: context.txt  situation.txt
src/story/village_0/places/place_2/: description.txt  next_place.txt
src/story/village_0/places/place_2/scenarios/scenario_0/: context.txt  situation.txt
(+10 files in other folders)
